--- a/src/components/sharedLayout/SharedLayout.module.css
+++ b/src/components/sharedLayout/SharedLayout.module.css
@@ -9,7 +9,7 @@ p {
 }
 
 .layout {
-  background-color: #fdf4f5;
+  background-color: #dbe5eb;
   display: flex;
   justify-content: space-between;
   align-items: center;
