--- a/src/components/invitation/Invitation.module.css
+++ b/src/components/invitation/Invitation.module.css
@@ -28,8 +28,41 @@
   text-align: center;
   padding: 20px 15px;
   margin-bottom: 20px;
+  width: 100%;
 }
 .itemPurple {
   composes: item;
   background-color: #7c96c2;
+}
+
+@media (min-width: 768px) {
+  .list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+  .item {
+    flex-basis: calc((100% - 1 * 10px) / 2);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+    padding: 0px 20px;
+    box-sizing: border-box;
+  }
+  .invitationTitle {
+    font-size: 32px;
+  }
+  .layout {
+    padding: 30px 40px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .item {
+    flex-basis: calc((100% - 3 * 10px) / 4);
+    height: 400px;
+  }
 }
