--- a/src/components/sharedLayout/SharedLayout.module.css
+++ b/src/components/sharedLayout/SharedLayout.module.css
@@ -33,11 +33,13 @@ p {
   height: 100vh;
   position: absolute;
   background-color: #dbe5eb;
-  transform: translateX(-100%);
-  transition: transform 0.3s ease-in-out;
+  transform: translateX(200%);
+  transition: transform 0.6s ease-in-out, border-radius 0.6s ease-in-out;
+  border-radius: 100%;
 }
 
 .active {
   composes: nav;
-  transform: translateX(0%);
+  transform: translateX(100%);
+  border-radius: 0%;
 }
