--- a/src/components/sharedLayout/SharedLayout.module.css
+++ b/src/components/sharedLayout/SharedLayout.module.css
@@ -24,7 +24,10 @@ p {
 .burger {
   margin-top: 8px;
 }
-
+.conteiner {
+  position: relative;
+  overflow: hidden;
+}
 .nav {
   display: flex;
   justify-content: center;
@@ -32,14 +35,15 @@ p {
   width: 60%;
   height: 100vh;
   position: absolute;
+  right: 0;
   background-color: #dbe5eb;
-  transform: translateX(200%);
+  transform: translateX(100%);
   transition: transform 0.6s ease-in-out, border-radius 0.6s ease-in-out;
   border-radius: 100%;
 }
 
 .active {
   composes: nav;
-  transform: translateX(100%);
+  transform: translateX(0%);
   border-radius: 0%;
 }
