--- a/src/components/sharedLayout/SharedLayout.module.css
+++ b/src/components/sharedLayout/SharedLayout.module.css
@@ -32,7 +32,7 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 60%;
+  width: 45%;
   height: 100vh;
   position: absolute;
   right: 0;
@@ -40,10 +40,40 @@ p {
   transform: translateX(100%);
   transition: transform 0.6s ease-in-out, border-radius 0.6s ease-in-out;
   border-radius: 100%;
+  overflow: hidden;
 }
 
 .active {
   composes: nav;
   transform: translateX(0%);
   border-radius: 0%;
+}
+
+.navList {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+.navItem {
+  width: 100%;
+}
+.navLink {
+  display: block;
+  width: 50%;
+  margin: 0 auto;
+  text-align: center;
+  text-decoration: none;
+  color: #000000;
+  font-size: 18px;
+  font-weight: 700;
+  text-transform: uppercase;
+  border-bottom: black 1px solid;
+  padding: 10px 0px;
 }
