--- a/src/components/contact/Contact.module.css
+++ b/src/components/contact/Contact.module.css
@@ -1,7 +1,7 @@
 .overlay {
   padding: 0px 20px 20px;
 }
-.contact {
+.contactInfoTitle {
   text-align: center;
 }
 .contactList {
@@ -17,9 +17,35 @@
   padding: 30px 20px;
   text-align: center;
 }
+.contactInfo {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
 
 @media (min-width: 768px) {
   .contactTitle {
     font-size: 32px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .contactInfo {
+    flex-direction: row;
+    align-items: stretch;
+  }
+  .contactInfoTitle {
+    margin-top: 0px;
+  }
+  .contactInfoBg {
+    width: 500px;
+  }
+  .overlay {
+    max-width: 1600px;
+    margin: 0 auto;
   }
 }
