--- a/src/components/sharedLayout/SharedLayout.module.css
+++ b/src/components/sharedLayout/SharedLayout.module.css
@@ -42,6 +42,7 @@ p {
   transition: transform 0.6s ease-in-out, border-radius 0.6s ease-in-out;
   border-radius: 100%;
   overflow: hidden;
+  z-index: 9999;
 }
 
 .active {
@@ -84,12 +85,22 @@ p {
   gap: 30px;
 }
 
-@media (min-width: 1280px) {
+@media (min-width: 1200px) {
   .buttonBurger {
     display: none;
   }
   .navListBig {
     display: flex;
+    list-style: none;
+  }
+  .navLinkBig {
+    text-decoration: none;
+    color: #000000;
+    font-size: 18px;
+    /* font-weight: 700; */
+    text-transform: uppercase;
+    border-bottom: black 1px solid;
+    padding: 10px 0px;
   }
   .layout {
     padding: 10px 30px;
