--- a/src/components/galleryInvitation/GalleryInvitation.module.css
+++ b/src/components/galleryInvitation/GalleryInvitation.module.css
@@ -12,9 +12,14 @@
   margin: 0px;
   padding: 0px;
 }
+.galleryItem {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .image {
-  width: 100%;
+  width: 90%;
   border-radius: 20px;
   transform: rotate(-3deg);
   transition: transform 0.3s ease-in-out;
