--- a/src/components/banner/Banner.module.css
+++ b/src/components/banner/Banner.module.css
@@ -3,10 +3,10 @@
   width: 100%;
   background-image: linear-gradient(
       to bottom,
-      rgba(0, 0, 0, 0.3),
-      rgba(0, 0, 0, 0)
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
     ),
-    url("../../assets/homeBackground.jpg");
+    url("../../assets/banerBackground.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -64,16 +64,16 @@
 
 @media (min-width: 1200px) {
   .bannerTitle {
-    font-size: 70px;
+    font-size: 120px;
     margin-bottom: 0px;
   }
   .bannerText {
-    font-size: 40px;
+    font-size: 72px;
     margin-top: 20px;
     margin-bottom: 20px;
   }
   .mainImg {
-    max-width: 1600px;
-    margin: 0 auto;
+    padding-top: 200px;
+    padding-bottom: 200px;
   }
 }
