--- a/src/components/galleryInvitation/GalleryInvitation.module.css
+++ b/src/components/galleryInvitation/GalleryInvitation.module.css
@@ -1,13 +1,37 @@
 .overlay {
   padding-left: 20px;
   padding-right: 20px;
+  padding-top: 20px;
+  padding-bottom: 40px;
+}
+.icons {
+  display: none;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
+.icon {
+  width: 200px;
 }
 
+.beachTitle {
+  padding: 30px 20px;
+  text-align: center;
+  margin-bottom: 50px;
+  font-size: 26px;
+  border: 5px dotted white;
+  border-radius: 10px;
+}
 .gallery {
   display: flex;
   flex-direction: column;
-  gap: 35px;
+  gap: 50px;
   align-items: center;
+  justify-content: center;
   list-style: none;
   margin: 0px;
   padding: 0px;
@@ -21,13 +45,14 @@
 .image {
   width: 90%;
   border-radius: 20px;
-  transform: rotate(-3deg);
+  border: 10px solid floralwhite;
+  transform: rotate(-5deg);
   transition: transform 0.3s ease-in-out;
 }
 
 .imageToRight {
   composes: image;
-  transform: rotate(3deg);
+  transform: rotate(5deg);
 }
 
 .image:hover {
@@ -39,7 +64,7 @@
     padding-left: 40px;
     padding-right: 40px;
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 50px;
     overflow: hidden;
   }
   .gallery {
@@ -48,6 +73,29 @@
     gap: 30px;
   }
   .galleryItem {
-    flex-basis: calc((100% - 1 * 30px) / 2);
+    flex-basis: calc((100% - 2 * 50px) / 3);
+  }
+  .beachTitle {
+    font-size: 32px;
+  }
+  .icons {
+    display: flex;
+  }
+  .icon {
+    width: 100px;
+  }
+}
+@media (min-width: 1200px) {
+  .overlay {
+    max-width: 1600px;
+    margin: 0 auto;
+    padding-bottom: 100px;
+  }
+  .beachTitle {
+    margin-top: 50px;
+    margin-bottom: 60px;
+  }
+  .icon {
+    width: 150px;
   }
 }
