--- a/src/components/mainPageGallery/MainPageGallery.module.css
+++ b/src/components/mainPageGallery/MainPageGallery.module.css
@@ -1,3 +1,90 @@
 .overlay {
-  background-color: blueviolet;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.photo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  display: block;
+  border: solid 10px white;
+  border-radius: 20px;
+  box-sizing: border-box;
+}
+.galleryTitle {
+  font-size: 26px;
+  text-align: center;
+  margin: 0px;
+  margin-bottom: 20px;
+}
+.galleryLink {
+  display: block;
+  margin: 0 auto;
+  width: 95%;
+  font-size: 14px;
+  text-decoration: none;
+  color: black;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  padding: 20px 10px;
+  border-radius: 10px;
+  border: solid 2px white;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.galleryLink:hover {
+  background-color: #e4e6a7;
+  border: solid 2px black;
+}
+.galleryList {
+  padding: 0px;
+  margin: 0px;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  width: 100%;
+}
+.galleryItem {
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+}
+
+@media (min-width: 768px) {
+  .gallery {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .galleryLink {
+    font-size: 26px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .galleryList {
+    flex-direction: row;
+    gap: 40px;
+    flex-wrap: wrap;
+  }
+  .galleryItem {
+    flex-basis: calc((100% - 1 * 40px) / 2);
+    height: 600px;
+  }
+  .galleryLink {
+    font-size: 32px;
+  }
+  .overlay {
+    max-width: 1600px;
+    margin: 0 auto;
+    margin-top: 30px;
+  }
+  .galleryTitle {
+    font-size: 32px;
+  }
 }
