--- a/src/components/galleryInvitation/GalleryInvitation.module.css
+++ b/src/components/galleryInvitation/GalleryInvitation.module.css
@@ -92,8 +92,9 @@
     padding-bottom: 100px;
   }
   .beachTitle {
-    margin-top: 50px;
-    margin-bottom: 60px;
+    margin-top: 80px;
+    margin-bottom: 120px;
+    font-size: 48px;
   }
   .icon {
     width: 150px;
