--- a/src/components/mainPageGallery/MainPageGallery.module.css
+++ b/src/components/mainPageGallery/MainPageGallery.module.css
@@ -36,7 +36,10 @@
 }
 .galleryLink:hover {
   background-color: #e4e6a7;
-  border: solid 2px black;
+  /* border: solid 2px black; */
+  scale: 0.95;
+  border-color: #7c96c2;
+  border-style: double;
 }
 .galleryList {
   padding: 0px;
@@ -77,7 +80,9 @@
     height: 600px;
   }
   .galleryLink {
-    font-size: 32px;
+    font-size: 36px;
+    border-width: 5px;
+    margin-bottom: 80px;
   }
   .overlay {
     max-width: 1600px;
@@ -85,6 +90,11 @@
     margin-top: 30px;
   }
   .galleryTitle {
-    font-size: 32px;
+    font-size: 48px;
+    margin-top: 80px;
+    margin-bottom: 80px;
+  }
+  .gallery {
+    margin-bottom: 80px;
   }
 }
