--- a/src/components/sharedLayout/SharedLayout.module.css
+++ b/src/components/sharedLayout/SharedLayout.module.css
@@ -37,6 +37,7 @@ p {
   position: relative;
   overflow: hidden;
   background: linear-gradient(to right, #e4e6a7, #7c96c2);
+  min-height: 100vh;
 }
 .nav {
   display: flex;
@@ -77,7 +78,7 @@ p {
 }
 .navLink {
   display: block;
-  width: 50%;
+  width: 80%;
   margin: 0 auto;
   text-align: center;
   text-decoration: none;
